--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "AmatuEdda Backend API",
   "main": "server.js",
+  "engines": {
+  "node": ">=20.0.0"
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -16,6 +18,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "stripe": "^14.10.0"
   },
   "devDependencies": {
