--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AmatuEdda Backend API",
   "main": "server.js",
   "engines": {
-  "node": ">=20.0.0"
+  "node": ">=20.0.0
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
