--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
-    "stripe": "^14.10.0"
+    "stripe": "^14.10.0",
     "snoowrap": "^1.23.0",
     "twitter-api-v2": "^1.15.2",
     "google-trends-api": "^5.0.2",
-    "groq-sdk": "^0.3.0",
     "rss-parser": "^3.13.0",
     "winston": "^3.11.0",
     "bull": "^4.12.0"
