--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@alkalisummer/google-trends-js": "^0.3.7",
     "@supabase/supabase-js": "^2.89.0",
     "bcrypt": "^5.1.1",
+    "bull": "^4.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -21,13 +23,11 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
-    "stripe": "^14.10.0",
-    "snoowrap": "^1.23.0",
-    "twitter-api-v2": "^1.15.2",
-    "google-trends-api": "^5.0.2",
     "rss-parser": "^3.13.0",
-    "winston": "^3.11.0",
-    "bull": "^4.12.0"
+    "snoowrap": "^1.23.0",
+    "stripe": "^14.10.0",
+    "twitter-api-v2": "^1.15.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
